--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <footer class="footer-contacts">
             <p>Связаться с нами:</p>
             <div class="social-links">
-                <a href="https://t.me/your_admin_link">Telegram</a>
-                <a href="https://vk.com/your_vk_link">Мы в ВК</a>
+                <a href="https://t.me/zaballonom">Telegram</a>
+                <a href="https://vk.com/zaballonom">Мы в ВК</a>
             </div>
         </footer>
     </div>
