--- a/admin.html
+++ b/admin.html
@@ -16,13 +16,22 @@
         textarea { height: 80px; }
         button.main-btn { width: 100%; background: #28a745; color: white; border: none; padding: 14px; border-radius: 8px; font-weight: bold; cursor: pointer; }
         button:disabled { opacity: 0.6; }
+
         .category-header { background: #e9ecef; padding: 8px 12px; border-radius: 6px; font-weight: bold; margin: 15px 0 10px 0; font-size: 14px; }
         .item-row { display: flex; align-items: center; gap: 12px; padding: 10px 0; border-bottom: 1px solid #eee; }
         .item-row img { width: 45px; height: 45px; border-radius: 6px; object-fit: cover; }
+
+        .order-card { display: flex; justify-content: space-between; align-items: center; background: #fff; border: 1px solid #eee; border-radius: 10px; padding: 15px; margin-bottom: 12px; box-shadow: 0 2px 5px rgba(0,0,0,0.03); gap: 15px; }
+        .order-info { flex: 1; }
+        .order-header { font-weight: bold; font-size: 16px; margin-bottom: 4px; }
+        .order-price { color: #28a745; font-weight: 600; }
+        .order-controls { display: flex; align-items: center; gap: 10px; }
+
+        .status-select { padding: 8px; border-radius: 6px; border: 1px solid #ddd; background: #f9f9f9; width: auto; margin: 0; }
         .actions { display: flex; gap: 5px; }
-        .del-btn { background: #ff4d4d; color: white; border: none; padding: 8px; border-radius: 6px; cursor: pointer; }
+        .del-btn-icon { background: #ffebee; color: #ff4d4d; border: none; width: 36px; height: 36px; border-radius: 8px; display: flex; align-items: center; justify-content: center; font-size: 18px; cursor: pointer; }
         .edit-btn { background: #ffc107; border: none; padding: 8px; border-radius: 6px; cursor: pointer; }
-        .order-card { padding: 15px; border: 1px solid #eee; border-radius: 8px; margin-bottom: 12px; background: #fff; }
+        .del-btn { background: #ff4d4d; color: white; border: none; padding: 8px; border-radius: 6px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -91,7 +100,6 @@
             const btn = document.getElementById('save-btn');
             const fileInput = document.getElementById('p-file');
             const pId = document.getElementById('p-id').value;
-
             const name = document.getElementById('p-name').value.trim();
             const price = parseFloat(document.getElementById('p-price').value);
 
@@ -102,7 +110,6 @@
 
             try {
                 let imgPath = currentImg;
-
                 if (fileInput.files[0]) {
                     const formData = new FormData();
                     formData.append('file', fileInput.files[0]);
@@ -131,12 +138,9 @@
                 if (res.ok) {
                     resetForm();
                     loadProducts();
-                } else {
-                    alert("Ошибка при сохранении!");
                 }
             } catch (e) {
                 console.error(e);
-                alert("Ошибка соединения с сервером");
             } finally {
                 btn.disabled = false;
                 btn.innerText = "Сохранить";
@@ -154,10 +158,7 @@
                     if (items.length > 0) {
                         html += `<div class="category-header">${cat.name}</div>`;
                         items.forEach(p => {
-                            // Формируем путь: если полный url - ок, если относительный - добавляем API_BASE
-                            let pic = p.img;
-                            if (!pic.startsWith('http')) pic = `${API_BASE}/${pic}`;
-
+                            const pic = p.img.startsWith('http') ? p.img : `${API_BASE}/content/${p.img.split('/').pop()}`;
                             html += `
                             <div class="item-row">
                                 <img src="${pic}" onerror="this.src='img/no-photo.jpg'">
@@ -172,7 +173,7 @@
                 });
                 list.innerHTML = html || "Товаров нет";
             } catch (e) {
-                list.innerHTML = "Ошибка: сервер не отвечает";
+                list.innerHTML = "Ошибка загрузки";
             }
         }
 
@@ -207,18 +208,26 @@
             try {
                 const res = await fetch(`${API_BASE}/api/admin/orders`, { headers: h });
                 const data = await res.json();
-                list.innerHTML = data.map(o => `
+                list.innerHTML = data.map(o => {
+                    let clientName = "Клиент";
+                    try { if(o.details) clientName = JSON.parse(o.details).customer.name; } catch(e){}
+                    return `
                     <div class="order-card">
-                        <b>Заказ #${o.id}</b>
-                        <p>Сумма: ${o.total_price} ₽ <br> Статус: ${o.status}</p>
-                        <select onchange="updateStatus(${o.id}, this.value)">
-                            <option value="new" ${o.status==='new'?'selected':''}>Новый</option>
-                            <option value="done" ${o.status==='done'?'selected':''}>Готов</option>
-                            <option value="cancel" ${o.status==='cancel'?'selected':''}>Отмена</option>
-                        </select>
-                        <button class="del-btn" style="float:right" onclick="deleteOrder(${o.id})">✕</button>
-                    </div>`).join('');
-            } catch (e) { list.innerHTML = "Ошибка загрузки заказов"; }
+                        <div class="order-info">
+                            <div class="order-header">Заказ #${o.id} — ${clientName}</div>
+                            <div class="order-price">${o.total_price} ₽</div>
+                        </div>
+                        <div class="order-controls">
+                            <select class="status-select" onchange="updateStatus(${o.id}, this.value)">
+                                <option value="new" ${o.status==='new'?'selected':''}>Новый</option>
+                                <option value="done" ${o.status==='done'?'selected':''}>Готов</option>
+                                <option value="cancel" ${o.status==='cancel'?'selected':''}>Отмена</option>
+                            </select>
+                            <button class="del-btn-icon" onclick="deleteOrder(${o.id})">✕</button>
+                        </div>
+                    </div>`;
+                }).join('');
+            } catch (e) { list.innerHTML = "Ошибка загрузки"; }
         }
 
         async function updateStatus(id, status) {
